# Test-Indicium

./: .gitignore  README.md  docker-compose.yml  exemple.env  pyproject.toml
docs/: data_dict.csv  data_dict.md
notebooks/: 1.0-Download_Data.ipynb  2.0-EDA.ipynb  3.0-Agent.ipynb
scripts/: debug_database.py  debug_llm.py  debug_vector_store.py  interactive_query.py  qdrant_health_check.py  run_data_pipeline.py  run_news_pipeline.py  test_query.py
src/: run.py
src/agents/: data_agent.py  news_agent.py  report_agent.py
src/application/use_cases/: ai_query_use_case.py  data_processing_use_case.py  enhanced_ai_query_use_case.py  news_collection_use_case.py
src/domain/entities/: document.py
src/domain/repositories/: data_repository.py  news_repository.py  vector_repository.py
src/domain/services/: agent_service.py  chain_service.py  llm_service.py
src/infrastructure/database/: file_repository.py  sqlite_repository.py
src/infrastructure/langchain/: langchain_agent_service.py  langchain_chain_service.py  langchain_llm_service.py
src/infrastructure/vector_store/: qdrant_repository.py
src/main/: config.py  main.py
src/presentation/cli/: main.py
src/utils/: data.py
